--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,9 @@ dependencies {
     // This dependency is used by the application.
     implementation 'com.google.guava:guava:28.2-jre'
 	implementation 'org.apache.kafka:kafka-clients:2.5.0'
+	implementation 'io.dropwizard:dropwizard-core:2.0.10'
+	implementation 'com.google.code.gson:gson:2.8.6'
+	
     // Use JUnit test framework
     testImplementation 'junit:junit:4.12'
 }
